@@ -61,7 +61,7 @@ typedef struct WBXMLBuffer_s WBXMLBuffer;
  * @brief Create a Buffer
  * @param data The initial data for buffer
  * @param len Size of data
- * @param malloc_block Size of malloc blocks (tune this parameter to avoid too many rallocations)
+ * @param malloc_block Size of the initial malloc block (tune this parameter to avoid too many reallocations)
  * @return The newly created Buffer, or NULL if not enought memory
  * @warning Do NOT use this function directly, use wbxml_buffer_create() macro instead
  */
